--- a/style.css
+++ b/style.css
@@ -886,10 +886,12 @@ nav a {
 }
 #lista-carrito {
   transition: all 0.3s ease;
-  max-height: 300px; /* tamaño inicial */
+  max-height: 200px; /* tamaño inicial */
   overflow: hidden;
+  background-color: pink; /* para que se note el área clickeable */
+  cursor: pointer;
 }
 
 #lista-carrito.expandido {
-  max-height: 800px; /* tamaño ampliado */
+  max-height: 600px; /* tamaño ampliado */
 }
